fixing card alignment

--- a/app/assets/stylesheets/components/_favorite_card.scss
+++ b/app/assets/stylesheets/components/_favorite_card.scss
@@ -1,3 +1,15 @@
+.favorite-circle-image {
+  max-width: 50px;
+}
+
+.favorite-circle-details {
+  width: 150px
+}
+
+.favorite-booth-details {
+  width: 150px
+}
+
 .required.favorite-notes {
   margin: 0
 }
